--- a/clientes.html
+++ b/clientes.html
@@ -14,6 +14,6 @@
     <h1>Clientes</h1>
     <table id="tabela"></table>
 
-    <script src="main.js"></script>
+    <script src="clientes.js"></script>
 </body>
 </html>
